--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
                     <tr>
                         <td style="padding: 40px 50px 40px 35px; line-height: 1.3; font-size: 14px; font-family: arial, sans-serif,times new roman;, serif; color: rgb(70, 70, 70);">
                             <span></span>
-                           <article>
+                           <article style="text-align: justify;text-justify: inter-word;">
                                <h1 style="color: #39C2D7; padding-left: 20px; text-align: center">Mi trayectoria en EPAM México</h1>
                                <p>
                                    <strong>Name:</strong> Jonathan Sanchez <br/>
                                    <strong>Role:</strong> Lead Software Testing Engineer<br/>
                                    <strong> On EPAM since:</strong> 2016<br/>
                                    <br/>
-                                   <span style="text-align: justify-all">Comencé el 14 de noviembre del 2016 con el rol de Senior Software Testing Engineer L3, hay una historia
+                                   <span>Comencé el 14 de noviembre del 2016 con el rol de Senior Software Testing Engineer L3, hay una historia
                                    detrás de como fue mi primer interés con la empresa.
                                    “Cuando yo me fui a EUA a trabajar había un espectacular en el periférico e iba manejando con mi esposa, y le comenté
                                    cuando regresemos de EUA yo quiero trabajar en esa empresa…”, Cuando estuve allá después de un tiempo
@@ -92,7 +92,6 @@
         </tbody>
     </table>
 </div>
-
 
 </body>
 </html>
