--- a/preNewsletter_upgraded.html
+++ b/preNewsletter_upgraded.html
@@ -112,7 +112,7 @@
                                 <tr>
                                     <td style="vertical-align: top; margin: 0px; line-height: 1.3; font-size: 16px; font-family: arial, sans-serif,times new roman; color: rgb(70, 70, 70); padding: 12px 18px; background-color: rgb(255, 255, 255);">
                                         <h1>Historia de Éxito</h1>
-                                        <p style="font-size: 14px;">En EPAM nos importa la gente, sus historias de éxito son nuestras historias de éxito.
+                                        <p style="text-align: justify;text-justify: inter-word; font-size: 14px;">En EPAM nos importa la gente, sus historias de éxito son nuestras historias de éxito.
                                             Nuestra gran motivación es saber que nuestros empleados sienten verdadera pasión por su trabajo.
                                             <br>Descubra más sobre por qué les gusta trabajar en nuestra empresa.
                                         </p>
@@ -122,18 +122,18 @@
                                             </div>
                                             <div>
                                                 <h3 style="color: #39C2D7; padding-left: 20px;">Mi trayectoria en EPAM México</h3>
-                                                <blockquote class="quote-Text" style="font-weight: lighter; font-style: italic; font-size: 20px;">
+                                                <blockquote class="quote-Text" style="font-weight: lighter; font-style: italic; font-size: 20px; text-align: justify;text-justify: inter-word; ">
                                                     “Me gustaría transmitir este mensaje con mis compañeros, que valoren la empresa en la que están
                                                     y a las personas con las que trabajan, siempre den su mayor esfuerzo.”
                                                 </blockquote>
                                                 <span style="display: flex; justify-content: flex-end"><strong>Jonathan Sánchez</strong></span>
                                             </div>
                                         </div>
-                                        <p style="font-size: 14px;">Comencé el 14 de noviembre del 2016 con el rol de Senior Tester L3. Uno de los principales motivos por lo que
+                                        <p style="text-align: justify;text-justify: inter-word; font-size: 14px">Comencé el 14 de noviembre del 2016 con el rol de Senior Tester L3. Uno de los principales motivos por lo que
                                             me gusta mi trabajo es que me gusta analizar y pensar diferentes escenarios, tanto en la vida diaria como
                                             en la profesional, me gusta también la convivencia y el trabajo en equipo, llegar a una meta en común,
                                             llegar a esa meta es de las mejores recompensas, me gusta ayudar a las personas enseñar, compartir
-                                            conocimiento y experiencias con los demás.
+                                            conocimiento y experiencias con los demás....
                                         </p>
                                         <p><a style="color: #39C2D7" href="https://epa.ms/qa-success-story" target="_blank" title="Jonathan success story">Leer más..</a></p>
                                      </td>
@@ -144,7 +144,6 @@
                     </tr>
                     <tr>
                     <tr>
-                        <img src="http://static.cdn.epam.com/uploads/25de0eda2b8cb5eb21bf2ae0f5b479f7/footer-logo.png">
                         <td style="font-size: 13px; margin: 0; font-family: arial,serif; line-height: 18px; text-size-adjust:
                         none; padding: 15px 20px; background-color: rgb(70, 69, 71); color: rgb(153, 153, 153);">
                             <img src="http://static.cdn.epam.com/uploads/25de0eda2b8cb5eb21bf2ae0f5b479f7/footer-logo.png">
