--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <div id="output">
-    <table width="100%" cellspacing="0" cellpadding="0" style="border: 0; background-color: #39C2D7;">
+    <table width="100%" cellspacing="0" cellpadding="0" style="border: 0; background-color: rgb(226,226,226);">
         <tbody>
         <tr>
             <td width="34%"></td>
