--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     </tr>
                     <tr>
                         <td style="padding: 10px 50px 10px 35px; line-height: 1.3; background-color: red; background-image: linear-gradient(green, white, red);">
-                            <span style="font-size: 16px; font-weight: bold; font-family: 'Open Sans', sans-serif;">Sucess Story of the Month</span>
+                            <span style="font-size: 16px; font-weight: bold; font-family: 'Open Sans', sans-serif;">Success Story of the Month</span>
                         </td>
                     </tr>
                     <tr>
